--- a/ui/shared/styles.css
+++ b/ui/shared/styles.css
@@ -1,102 +1,41 @@
+:root {
+  --btn: #0e629c;
+  --btn-hover: #15496e;
+  --btn-click: #0e3450;
+}
+
 html,
 body {
   background-color: rgb(10, 1, 15);
   font-family: "Roboto", sans-serif !important;
+  color: white;
+  letter-spacing: 0.0625em;
+}
+.logo {
+  vertical-align: -4px;
+}
+.change {
+  line-height: 150%;
 }
 .badge-success {
   color: #fff;
-  background-color: #64a19d;
-}
-#notes {
-  overflow-y: auto;
-  height: 25rem;
-}
-#root {
-  margin-bottom: 4rem;
+  background-color: #73c991;
 }
 .badge-danger {
   color: #fff;
   background-color: #ce4f59;
 }
-.animated-logo {
-  -webkit-filter: opacity(0.5);
+.badge {
+  vertical-align: 2px;
+  width: 6rem;
+}
+.opacity-50 {
   filter: opacity(0.5);
+  -webkit-filter: opacity(0.5);
 }
-#mainNav {
-  min-height: 56px;
-  background-color: #fff;
-}
-#mainNav .navbar-toggler {
-  font-size: 80%;
-  padding: 0.75rem;
-  color: #64a19d;
-  border: 1px solid #64a19d;
-}
-#mainNav .navbar-toggler:focus {
-  outline: 0;
-}
-#mainNav .navbar-brand {
-  color: #161616;
-  font-weight: 700;
-  padding: 0.9rem 0;
-}
-#mainNav .navbar-nav .nav-item:hover {
-  color: fade(white, 80%);
-  outline: 0;
-  background-color: transparent;
-}
-#mainNav .navbar-nav .nav-item:active,
-#mainNav .navbar-nav .nav-item:focus {
-  outline: 0;
-  background-color: transparent;
-}
-@media (min-width: 992px) {
-  #mainNav {
-    padding-top: 0;
-    padding-bottom: 0;
-    border-bottom: none;
-    background-color: transparent;
-    -webkit-transition: background-color 0.3s ease-in-out;
-    transition: background-color 0.3s ease-in-out;
-  }
-  #mainNav .navbar-brand {
-    padding: 0.5rem 0;
-    color: rgba(255, 255, 255, 0.5);
-  }
-  #mainNav .nav-link {
-    -webkit-transition: none;
-    transition: none;
-    padding: 2rem 1.5rem;
-    color: rgba(255, 255, 255, 0.5);
-  }
-  #mainNav .nav-link:hover {
-    color: rgba(255, 255, 255, 0.75);
-  }
-  #mainNav .nav-link:active {
-    color: #fff;
-  }
-  #mainNav.navbar-shrink {
-    background-color: #fff;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    color: #161616;
-  }
-  #mainNav.navbar-shrink .nav-link {
-    color: #161616;
-    padding: 1.5rem 1.5rem 1.25rem;
-    border-bottom: 0.25rem solid transparent;
-  }
-  #mainNav.navbar-shrink .nav-link:hover {
-    color: #64a19d;
-  }
-  #mainNav.navbar-shrink .nav-link:active {
-    color: #467370;
-  }
-  #mainNav.navbar-shrink .nav-link.active {
-    color: #64a19d;
-    outline: 0;
-    border-bottom: 0.25rem solid #64a19d;
-  }
+.scrollable {
+  overflow-y: auto;
+  height: 35rem;
 }
 .masthead {
   position: relative;
@@ -108,7 +47,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  margin-top: 4rem;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 .masthead h1 {
   font-size: 2.5rem;
@@ -116,7 +56,7 @@ body {
   font-weight: 900;
 }
 .masthead h2 {
-  max-width: 20rem;
+  /* max-width: 20rem; */
   font-size: 1rem;
 }
 @media (min-width: 768px) {
@@ -127,7 +67,7 @@ body {
 }
 @media (min-width: 992px) {
   .masthead {
-    height: 100vh;
+    /* height: 100vh; */
     padding: 0;
   }
   .masthead h1 {
@@ -135,7 +75,7 @@ body {
     line-height: 6.5rem;
   }
   .masthead h2 {
-    max-width: 30rem;
+    /* max-width: 30rem; */
     font-size: 1.25rem;
   }
 }
@@ -149,56 +89,17 @@ body {
   border: 0;
 }
 .btn-primary {
-  background-color: #64a19d;
+  background-color: var(--btn);
 }
 .btn-primary:hover {
-  background-color: #4f837f;
+  background-color: var(--btn-hover);
 }
 .btn-primary:focus {
-  background-color: #4f837f;
+  background-color: var(--btn-hover);
   color: #fff;
 }
 .btn-primary:active {
-  background-color: #467370 !important;
-}
-.about-section {
-  padding-top: 10rem;
-}
-.about-section p {
-  margin-bottom: 5rem;
-}
-.projects-section {
-  padding: 10rem 0;
-}
-.projects-section .featured-text {
-  padding: 2rem;
-}
-@media (min-width: 992px) {
-  .projects-section .featured-text {
-    padding: 0 0 0 2rem;
-    border-left: 0.5rem solid #64a19d;
-  }
-}
-.projects-section .project-text {
-  padding: 3rem;
-  font-size: 90%;
-}
-@media (min-width: 992px) {
-  .projects-section .project-text {
-    padding: 5rem;
-  }
-  .projects-section .project-text hr {
-    border-color: #64a19d;
-    border-width: 0.25rem;
-    width: 30%;
-  }
-}
-.signup-section {
-  padding: 10rem 0;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
+  background-color: var(--btn-click) !important;
 }
 .text,
 .textarea {
@@ -208,61 +109,13 @@ body {
   height: auto;
   border: 0;
 }
-.contact-section {
-  padding: 5rem 0 0;
-}
-.contact-section .card {
-  border: 0;
-  border-bottom: 0.25rem solid #64a19d;
-}
-.contact-section .card h4 {
-  font-size: 0.8rem;
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-}
-.contact-section .card hr {
-  border-color: #64a19d;
-  border-width: 0.25rem;
-  width: 3rem;
-}
-.contact-section .social {
-  margin-top: 5rem;
-}
-.contact-section .social a {
-  text-align: center;
-  height: 3rem;
-  width: 3rem;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 100%;
-  line-height: 3rem;
-  color: rgba(255, 255, 255, 0.3);
-}
-.contact-section .social a:hover {
-  color: rgba(255, 255, 255, 0.5);
-}
-.contact-section .social a:active {
-  color: #fff;
-}
-body {
-  letter-spacing: 0.0625em;
-}
 a {
-  color: #64a19d;
+  /* color: #64a19d; */
+  color: var(--btn);
 }
 a:focus,
 a:hover {
   text-decoration: none;
-  color: #3c6360;
-}
-.bg-black {
-  background-color: #161616 !important;
-}
-.bg-primary {
-  background-color: #64a19d !important;
-}
-.text-primary {
-  color: #64a19d !important;
-}
-footer {
-  padding: 5rem 0;
+  /* color: #3c6360; */
+  color: var(--btn-hover);
 }
