--- a/ui/shared/styles.css
+++ b/ui/shared/styles.css
@@ -53,7 +53,8 @@ body {
 .masthead h1 {
   font-size: 2.5rem;
   line-height: 2.5rem;
-  font-weight: 900;
+  font-weight: bold;
+  font-family: "Open Sans";
 }
 .masthead h2 {
   /* max-width: 20rem; */
