--- a/ui/shared/styles.css
+++ b/ui/shared/styles.css
@@ -4,10 +4,11 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #1d1d1d !important;
   font-family: "Roboto", sans-serif;
+  background-color: var(--vscode-editor-background);
   color: #bdbdbd;
   letter-spacing: 0.0625em;
+  mix-blend-mode: difference;
 }
 
 .content-row {
