Fix issues with theme on modal

--- a/ui/shared/styles.css
+++ b/ui/shared/styles.css
@@ -19,8 +19,8 @@ body.vscode-light {
 }
 
 .vscode-light .logo {
-  -webkit-filter: invert(1), opacity(0.5);
-  filter: invert(1), opacity(0.5);
+  -webkit-filter: invert(1) opacity(0.5);
+  filter: invert(1) opacity(0.5);
 }
 
 .tooltip {
