Add new settings

--- a/ui/shared/styles.css
+++ b/ui/shared/styles.css
@@ -167,7 +167,8 @@ body h3 {
 }
 
 .text,
-.textarea {
+.textarea,
+.number {
   -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 1.25rem 2rem;
