Add checkbox on bottom right

--- a/ui/shared/styles.css
+++ b/ui/shared/styles.css
@@ -80,6 +80,18 @@ body.vscode-light {
   left: 4rem;
 }
 
+.dock-bottom-right {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  background-color: rgb(42, 42, 42);
+  border-radius: 1.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .logo {
   padding-right: 0.5rem;
   filter: opacity(0.5);
